--- a/planetary_diversity/localisation/english/planetarydiversity_l_english.yml
+++ b/planetary_diversity/localisation/english/planetarydiversity_l_english.yml
@@ -2035,7 +2035,7 @@
  #Floating Origin
  origin_floating_world:0 "Floating Islands Homeworld"
  origin_floating_world_desc:0 "This civilization evolved on a world like no other in the galaxy. Thanks to the unique element Eludium, this world's land masses float effortlessly through the sky. The element's unique quality also lends itself to many applications which allow for a truly unique society."
- origin_tooltip_floating_world_effects:0 "- Homeworld is a §Y$pc_floating$§! (Size: £planetsize£ §Y20§!) with a §YRare Planetary Feature§!\n- Habitability preference is set to §Y$trait_pc_floating_preference$§!.\n- Has access to several unique technologies.\\n- §RDoes not get any guaranteed habitable worlds.§!"
+ origin_tooltip_floating_world_effects:0 "- Homeworld is a §Y$pc_floating$§! (Size: £planetsize£ §Y20§!) with a §YRare Planetary Feature§!\n- Habitability preference is set to §Y$trait_pc_floating_preference$§!.\n- Has access to several unique technologies.\n- §RDoes not get any guaranteed habitable worlds.§!"
  #Graveyard Origin
  origin_graveyard_world:0 "The Graveyard of the Tiyanki"
  origin_graveyard_world_desc:0 "This civilization evolved on a planet that happens to be the end of the life cycle for the Tiyanki. Their passing to the surface was for many generations a sign of both death and rebirth... depending how close they landed to a settled area." 
