--- a/planetary_diversity/localisation/english/planetarydiversity_l_english.yml
+++ b/planetary_diversity/localisation/english/planetarydiversity_l_english.yml
@@ -6499,5 +6499,9 @@ snowball_earth.11.name:0 "The First Thaw"
  trait_pc_irradiated_tidal_preference:0 "Radiotrophic Tidally-Locked Preference"
  trait_pc_irradiated_tidal_preference_desc:0 "$trait_pc_arctic_preference_desc$"
 
+ #Hot Fixing
+ d_pd_shroud_arc_tooltip:0 "Unity jobs gain bonuses depending on our connection to the Shroud."
+ d_pd_shroud_arc_tooltip_short:0 "Unity jobs gain bonuses depending on our connection to the Shroud."
+
 
 
