--- a/planetary_diversity/localisation/russian/planetarydiversity_l_russian.yml
+++ b/planetary_diversity/localisation/russian/planetarydiversity_l_russian.yml
@@ -6494,7 +6494,7 @@ snowball_earth.11.name:0 "The First Thaw"
  trait_pc_pd_dry_cave_preference_desc:0 "$trait_pc_arctic_preference_desc$"
  pc_pd_dry_cave:0 "Dry Cavern World"
  pc_pd_dry_cave_desc:0 "Rocky world with a nitrogen-oxygen atmosphere. With a weak magnetosphere, much of the surface of this world is barren rock. Under the surface there are an endless series of sandstone caves that support a weak hydrosphere and hardy planet life."
- pc_pd_dry_cave_adj:0 "frozen"
+ pc_pd_dry_cave_adj:0 "sandy"
  mod_pc_pd_dry_cave_habitability:0 "Dry Cavern Habitability"
  START_SCREEN_PART_ONE_PD_DRY_CAVE:0 "In the eons since the first primitive [GetSpeciesName] communities took shape in the sandstone caves of [GetHomeWorldName], our civilization has spread and prospered."
  TRAIT_DRY_CAVE_PREFERENCE_EFFECT:0 "Dry Cavern Habitability:$pd80$\n$DRY_PREFERENCE_EFFECT$"
@@ -6632,6 +6632,15 @@ snowball_earth.11.name:0 "The First Thaw"
  mod_pc_irradiated_tidal_habitability:0 "Radiotrophic Tidally-Locked Habitability"
  trait_pc_irradiated_tidal_preference:0 "Radiotrophic Tidally-Locked Preference"
  trait_pc_irradiated_tidal_preference_desc:0 "$trait_pc_arctic_preference_desc$"
+
+ #Hot Fixing
+ d_pd_shroud_arc_tooltip:0 "Unity jobs gain bonuses depending on our connection to the Shroud."
+ d_pd_shroud_arc_tooltip_short:0 "Unity jobs gain bonuses depending on our connection to the Shroud."
+ lifeseeded_pd.1.name:0 "Seeded from the Void"
+ lifeseeded_pd.1.desc:0 "Whomever seeded life on our world built it to suit our needs.\n\nWhat type of Gaia World did they create for us?"
+ lifeseeded_pd.1.gaia_frozen:0 "Cold Gaia World"
+ lifeseeded_pd.1.gaia_dry:0 "Dry Gaia World"
+ lifeseeded_pd.1.gaia_normal:0 "Wet Gaia World"
 
  
 
