--- a/planetary_diversity/localisation/simp_chinese/planetarydiversity_l_simp_chinese.yml
+++ b/planetary_diversity/localisation/simp_chinese/planetarydiversity_l_simp_chinese.yml
@@ -5737,3 +5737,12 @@
  mod_pc_irradiated_tidal_habitability:0 "潮汐锁定宜居性（放射营养）"
  trait_pc_irradiated_tidal_preference:0 "潮汐锁定偏好（放射营养）"
  trait_pc_irradiated_tidal_preference_desc:0 "$trait_pc_arctic_preference_desc$"
+
+ #Hot Fixing
+ d_pd_shroud_arc_tooltip:0 "Unity jobs gain bonuses depending on our connection to the Shroud."
+ d_pd_shroud_arc_tooltip_short:0 "Unity jobs gain bonuses depending on our connection to the Shroud."
+ lifeseeded_pd.1.name:0 "Seeded from the Void"
+ lifeseeded_pd.1.desc:0 "Whomever seeded life on our world built it to suit our needs.\n\nWhat type of Gaia World did they create for us?"
+ lifeseeded_pd.1.gaia_frozen:0 "Cold Gaia World"
+ lifeseeded_pd.1.gaia_dry:0 "Dry Gaia World"
+ lifeseeded_pd.1.gaia_normal:0 "Wet Gaia World"
