--- a/planetary_diversity/localisation/simp_chinese/planetarydiversity_l_simp_chinese.yml
+++ b/planetary_diversity/localisation/simp_chinese/planetarydiversity_l_simp_chinese.yml
@@ -5279,7 +5279,7 @@
  START_SCREEN_PART_ONE_SCRAPYARD:0 "我们的家园——[GetHomeWorldName]——是一块废料。\n\n很明显，来自各个星系的人们把这里当作一处垃圾填满场，已经有证据显示了来自多个不同文明的废品。我们会是星球原主的后裔吗？还是说我们只是被遗忘的工人呢？\n\n自古以来，我们便从成堆的废料中搜刮出一点资源，以此生存，慢慢地从那些前人遗弃的废料中学习。"
  holding_pd_scrap_pile:0 "外星废料堆"
  holding_pd_scrap_pile_desc:0 "用于容纳宗主的废料的指定之地。对于当地的环境并不是尽善尽美，但是它提供了宗主的工业知识，当地人也可以从废料中回收到矿物和合金。"
- holding_scrap_pile_effect:0 "每座$holding_pd_scrap_pile$为宗主国首都提供：£alloys£ §Y$alloys$§!产出§G+5%§!"
+ holding_scrap_pile_effect:0 "每座$holding_pd_scrap_pile$为宗主国首都提供：£alloys£ §Y$alloys$§!产出§G+2.5%§!"
  holding_scrap_pile_build_modifier:0 "外星废料堆"
  holding_scrap_pile_build_modifier_desc:0 "我们的地产正在运送来自其他星球废料场的废品，可以提升该星球的合金产出。"
  pd_origin_init_scrapyard_NAME:0 "弃置之地星系"
@@ -5739,10 +5739,10 @@
  trait_pc_irradiated_tidal_preference_desc:0 "$trait_pc_arctic_preference_desc$"
 
  #Hot Fixing
- d_pd_shroud_arc_tooltip:0 "Unity jobs gain bonuses depending on our connection to the Shroud."
- d_pd_shroud_arc_tooltip_short:0 "Unity jobs gain bonuses depending on our connection to the Shroud."
- lifeseeded_pd.1.name:0 "Seeded from the Void"
- lifeseeded_pd.1.desc:0 "Whomever seeded life on our world built it to suit our needs.\n\nWhat type of Gaia World did they create for us?"
- lifeseeded_pd.1.gaia_frozen:0 "Cold Gaia World"
- lifeseeded_pd.1.gaia_dry:0 "Dry Gaia World"
- lifeseeded_pd.1.gaia_normal:0 "Wet Gaia World"
+ d_pd_shroud_arc_tooltip:0 "凝聚力岗位获得的加成取决于我们与虚境的联系。"
+ d_pd_shroud_arc_tooltip_short:0 "凝聚力岗位获得的加成取决于我们与虚境的联系。"
+ lifeseeded_pd.1.name:0 "太虚之籽"
+ lifeseeded_pd.1.desc:0 "不论何人在此地播种生命，是祂创造了这里，适应我们之需。\n\n祂们为我们缔造了何种盖亚星球？"
+ lifeseeded_pd.1.gaia_frozen:0 "寒冷盖亚"
+ lifeseeded_pd.1.gaia_dry:0 "干燥盖亚"
+ lifeseeded_pd.1.gaia_normal:0 "湿润盖亚"
