--- a/planetary_diversity/localisation/korean/planetarydiversity_l_korean.yml
+++ b/planetary_diversity/localisation/korean/planetarydiversity_l_korean.yml
@@ -6025,7 +6025,7 @@ snowball_earth.11.name:0 "The First Thaw"
  START_SCREEN_PART_ONE_SCRAPYARD:0 "Our home, [GetHomeWorldName], is trash.\n\nIt's clear that at one point the galactic community used this planet as a landfill, we have found evidence of several different civilization's trash. Could we be the descendants of the planet's original owners, or are we just the long forgotten workers?\n\nFor time immemorial we have survived by scraping together what little resources we could from piles of junk on this planet, slowly learning from items abandoned by those who came before."
  holding_pd_scrap_pile:0 "Foreign Scrap Pile"
  holding_pd_scrap_pile_desc:0 "A designated place to hold this empire's scrap for it's Overlord. Its not the best for the environment of the planet, but it will prove to gain industrial insights for the Overlord and the locals are allowed to pick over the remains for minerals and alloys."
- holding_scrap_pile_effect:0 "Each $holding_pd_scrap_pile$ grants §G+5%§! £alloys£ §Y$alloys$§! production on the Overlord's capital."
+ holding_scrap_pile_effect:0 "Each $holding_pd_scrap_pile$ grants §G+2.5%§! £alloys£ §Y$alloys$§! production on the Overlord's capital."
  holding_scrap_pile_build_modifier:0 "Foreign Scrap Yards"
  holding_scrap_pile_build_modifier_desc:0 "Our holdings are shipping scrap material from other planet's scrapyards, improving our alloy output on this world."
  pd_origin_init_scrapyard_NAME:0 "The Scrapyard System"
@@ -6556,6 +6556,12 @@ snowball_earth.11.name:0 "The First Thaw"
  lifeseeded_pd.1.gaia_frozen:0 "Cold Gaia World"
  lifeseeded_pd.1.gaia_dry:0 "Dry Gaia World"
  lifeseeded_pd.1.gaia_normal:0 "Wet Gaia World"
+ decision_flood_ringworld:0 "Flood Ringworld"
+ decision_flood_ringworld_desc:0 "This ringworld could be ideal for us - if only there was enough water. Our ice mining networks enable us to harvest ice from other celestial bodies and flood [This.GetName], making it into an ringworld aquarium."
+ decision_flood_ringworld_tooltip:0 "Habitability: §R-20%§!\nConsidered an §YOcean§! world for §YAquatic§! species.\nIce will be harvested from a system with an §Y$sm_ice_mining_station$§! on the starbase."
+ decision_unflood_ringworld:0 "Unflood Ringworld"
+ decision_unflood_ringworld_desc:0 "This ringworld could be ideal for us - if only there wasn't so much water. While costly, we can drain much of the excess water into space."
+ decision_unflood_ringworld_tooltip:0 "By draining the water, this ringworld will once again be ideal for races who reside above sea level."
 
  
 
