--- a/planetary_diversity/localisation/simp_chinese/planetarydiversity_l_simp_chinese.yml
+++ b/planetary_diversity/localisation/simp_chinese/planetarydiversity_l_simp_chinese.yml
@@ -1143,7 +1143,7 @@
  TRAIT_KARST_PREFERENCE_EFFECT:0 "洞窟宜居度（湿润）：$pd80$\n$WET_PREFERENCE_EFFECT$"
  d_karst_cave:0 "密集洞穴网络"
  d_karst_cave_desc:0 "这个星球上延展开的洞穴网络为我们提供了独特的机会。"
- karst:0 "岩溶世界"
+ karst:0 "喀斯特洞窟"
  karst_desc:0 "地下洞穴网络延伸到整个星球，带来了罕见的开发机会。"
  building_karst_mine:0 "洞窟矿业集团"
  building_karst_mine_desc:0 "深邃的洞穴通向易于开采的丰饶矿脉，可以提升星球的矿物产能。"
@@ -1917,13 +1917,13 @@
  mod_pc_wetswamp_habitability:1 "湿地宜居性"
  START_SCREEN_PART_ONE_WETSWAMP:0 "自从[GetHomeWorldName]的密集的湿地中形成了第一个原始[GetSpeciesName]社区以来的亿万年里，我们的文明已经传播和繁荣起来。"
  TRAIT_WETSWAMP_PREFERENCE_EFFECT:0 "湿地宜居性：$pd80$\n海洋宜居性：$pd80$\n温性雨林宜居性：$pd80$\n山海宜居性：$pd80$\n雺雾宜居性：$pd80$\n$WET_PREFERENCE_EFFECT$"
- pc_outback:0 "荒原星球"
+ pc_outback:0 "荒漠星球"
  pc_outback_desc:0 "炎热干燥的世界，拥有氮氧大气。干旱或半干旱的灌丛和荒漠覆盖了星球上的大部分地方，环水域地带植被较多。水圈主要被限制在一些内陆海和天然地下泉中。"
- pc_outback_tile:0 "荒原地形"
+ pc_outback_tile:0 "荒漠地形"
  pc_outback_tile_desc:0 "疏灌丛与半干旱平原。"
- trait_pc_outback_preference:0 "荒原偏好"
+ trait_pc_outback_preference:0 "荒漠偏好"
  trait_pc_outback_preference_desc:1 "$trait_pc_arctic_preference_desc$"
- mod_pc_outback_habitability:1 "荒原宜居性"
+ mod_pc_outback_habitability:1 "荒漠宜居性"
  START_SCREEN_PART_ONE_OUTBACK:0 "自从[GetHomeWorldName]的灰暗的灌木丛中形成了第一个原始[GetSpeciesName]社区以来的亿万年里，我们的文明已经传播和繁荣起来。"
  TRAIT_OUTBACK_PREFERENCE_EFFECT:0 "荒原宜居性：$pd80$\n沙漠宜居性：$pd80$\n沙丘宜居性：$pd80$\n沃洲宜居性：$pd80$\n海岸漠境宜居性：$pd80$\n$DRY_PREFERENCE_EFFECT$"
  pc_highland:0 "高原星球"
@@ -3058,7 +3058,7 @@
  mod_job_lanthanide_miner_add:0 "$job_lanthanide_miner$岗位"
  mod_job_lanthanide_miner_per_pop:0 "每$VALUE$人口§G+1§!$job_lanthanide_miner$岗位"
  mod_job_lanthanide_miner_per_pop_short:0 "\n每$VALUE$ £pop£ §G+1§! £mod_job_lanthanide_miner_add£"
- TRAIT_LANTHANIDE_PREFERENCE_EFFECT:0 "镧系宜居性：$pd80$\n$COLD_PREFERENCE_EFFECT$"
+ TRAIT_LANTHANIDE_PREFERENCE_EFFECT:0 "镧星球宜居性：$pd80$\n寒冷气候宜居性：$pd60$\n干燥气候宜居性：$pd40$"
  district_archive_industrial:0 "工业区"
  district_archive_industrial_plural:0 "工业区"
  district_archive_industrial_desc:0 "工业机械填满了档案馆的这个部分，充分利用了档案馆的独特架构。"
@@ -3353,7 +3353,7 @@
  pc_sandsea_adj:0 "沙丘"
  pc_mesa_adj:0 "台地"
  pc_hadesert_adj:0 "雾霭荒漠"
- pc_outback_adj:0 "荒原"
+ pc_outback_adj:0 "荒漠"
  pc_frozen_desert_adj:0 "冷沙漠"
  pc_antarctic_adj:0 "冰原"
  pc_aeolian_adj:0 "风蚀"
@@ -5279,7 +5279,7 @@
  START_SCREEN_PART_ONE_SCRAPYARD:0 "我们的家园——[GetHomeWorldName]——是一块废料。\n\n很明显，来自各个星系的人们把这里当作一处垃圾填满场，已经有证据显示了来自多个不同文明的废品。我们会是星球原主的后裔吗？还是说我们只是被遗忘的工人呢？\n\n自古以来，我们便从成堆的废料中搜刮出一点资源，以此生存，慢慢地从那些前人遗弃的废料中学习。"
  holding_pd_scrap_pile:0 "外星废料堆"
  holding_pd_scrap_pile_desc:0 "用于容纳宗主的废料的指定之地。对于当地的环境并不是尽善尽美，但是它提供了宗主的工业知识，当地人也可以从废料中回收到矿物和合金。"
- holding_scrap_pile_effect:0 "每座$holding_pd_scrap_pile$为宗主国首都提供：£alloys£ §Y$alloys$§!产出§G+2.5%§!"
+ holding_scrap_pile_effect:0 "每座$holding_pd_scrap_pile$为宗主国首都提供：£alloys£ §Y$alloys$§!产出§G+5%§!"
  holding_scrap_pile_build_modifier:0 "外星废料堆"
  holding_scrap_pile_build_modifier_desc:0 "我们的地产正在运送来自其他星球废料场的废品，可以提升该星球的合金产出。"
  pd_origin_init_scrapyard_NAME:0 "弃置之地星系"
@@ -5619,7 +5619,7 @@
  trait_pc_pd_cold_cave_preference_desc:0 "$trait_pc_arctic_preference_desc$"
  pc_pd_cold_cave:0 "洞窟星球（寒冷）"
  pc_pd_cold_cave_desc:0 "拥有氮氧大气的岩石星球。由于磁气圈较弱，星球表面大部分是贫瘠的岩石。在地表之下，是无穷无尽的洞穴系统以及以及一个封冻的水圈，支撑着地衣和苔藓。"
- pc_pd_cold_cave_adj:0 "洞窟"
+ pc_pd_cold_cave_adj:0 "严寒"
  mod_pc_pd_cold_cave_habitability:0 "洞窟宜居度（寒冷）"
  START_SCREEN_PART_ONE_PD_COLD_CAVE:0 "自从[GetHomeWorldName]的冰洞中形成了第一个原始[GetSpeciesName]社区以来的亿万年里，我们的文明已经传播和繁荣起来。"
  TRAIT_COLD_CAVE_PREFERENCE_EFFECT:0 "洞窟宜居度（寒冷）：$pd80$\n$COLD_PREFERENCE_EFFECT$"
@@ -5629,7 +5629,6 @@
  trait_pc_pd_dry_cave_preference_desc:0 "$trait_pc_arctic_preference_desc$"
  pc_pd_dry_cave:0 "洞窟星球（干燥）"
  pc_pd_dry_cave_desc:0 "拥有氮氧大气的岩石星球。由于磁气圈较弱，星球表面大部分是贫瘠的岩石。在地表之下，是无穷无尽的洞穴系统，支撑起孱弱的水圈与坚韧的植物。"
- pc_pd_dry_cave_adj:0 "洞窟"
  mod_pc_pd_dry_cave_habitability:0 "洞窟宜居度（干燥）"
  START_SCREEN_PART_ONE_PD_DRY_CAVE:0 "自从[GetHomeWorldName]的砂岩洞穴中形成了第一个原始[GetSpeciesName]社区以来的亿万年里，我们的文明已经传播和繁荣起来。"
  TRAIT_DRY_CAVE_PREFERENCE_EFFECT:0 "洞窟宜居度（干燥）：$pd80$\n$DRY_PREFERENCE_EFFECT$"
@@ -5737,12 +5736,27 @@
  mod_pc_irradiated_tidal_habitability:0 "潮汐锁定宜居性（放射营养）"
  trait_pc_irradiated_tidal_preference:0 "潮汐锁定偏好（放射营养）"
  trait_pc_irradiated_tidal_preference_desc:0 "$trait_pc_arctic_preference_desc$"
-
- #Hot Fixing
  d_pd_shroud_arc_tooltip:0 "凝聚力岗位获得的加成取决于我们与虚境的联系。"
  d_pd_shroud_arc_tooltip_short:0 "凝聚力岗位获得的加成取决于我们与虚境的联系。"
+ pc_pd_dry_cave_adj:0 "砂砾"
  lifeseeded_pd.1.name:0 "太虚之籽"
- lifeseeded_pd.1.desc:0 "不论何人在此地播种生命，是祂创造了这里，适应我们之需。\n\n祂们为我们缔造了何种盖亚星球？"
+ lifeseeded_pd.1.desc:0 "不论何人在此地播种生命，是祂创造了这里，适应我们之需。\n\n祂们为我们准备了何种盖亚星球？"
  lifeseeded_pd.1.gaia_frozen:0 "寒冷盖亚"
  lifeseeded_pd.1.gaia_dry:0 "干燥盖亚"
  lifeseeded_pd.1.gaia_normal:0 "湿润盖亚"
+ pd_rename_planet_01:0 "[solar_system.GetName] I"
+ pd_rename_planet_02:0 "[solar_system.GetName] II"
+ pd_rename_planet_03:0 "[solar_system.GetName] III"
+ pd_rename_planet_04:0 "[solar_system.GetName] IV"
+ pd_rename_planet_05:0 "[solar_system.GetName] V"
+ pd_rename_planet_06:0 "[solar_system.GetName] VI"
+ pd_rename_planet_07:0 "[solar_system.GetName] VII"
+ pd_rename_planet_08:0 "[solar_system.GetName] VIII"
+ pd_rename_planet_09:0 "[solar_system.GetName] IX"
+ pd_rename_planet_10:0 "[solar_system.GetName] X"
+ decision_flood_ringworld:0 "淹没环世界"
+ decision_flood_ringworld_desc:0 "环世界是我们理想的开发地——只要那里有充足的水。我们的冰开采网络能让我们自其它天体开采水冰，淹灌[This.GetName]，使此地变为完美的环世界水族馆。"
+ decision_flood_ringworld_tooltip:0 "宜居性：§R-20%§!\n对§Y水生§!物种等同于§Y海洋§!星球。\n可以通过建有§Y$sm_ice_mining_station$§!的恒星基地从恒星系中采集水冰。"
+ decision_unflood_ringworld:0 "环世界泄洪"
+ decision_unflood_ringworld_desc:0 "环世界可以成为理想的居住地——只要那里没有那么多的水。尽管成本高昂，但我们可以将多余而泛滥的水排入太空中。"
+ decision_unflood_ringworld_tooltip:0 "浆水排空以后，此处环世界会再度成为那些陆地种族的理想家园。"
